chore: lists to record_lists rename
